Time offset not working with Bake Object transform to Grease pencil #89849

Closed
opened 2021-07-14 09:16:16 +02:00 by Aleš Jelovčan · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce MX330/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.75

Blender Version
Broken: version: 3.0.0 Alpha, branch: temp-lineart-contained, commit date: 2021-07-06 13:48, hash: e63b4b66e5
Worked: Broken in 2.93.1 also

Short description of error
All other modifiers are baked correctly, but time offset only bakes the first frame in all frames of new object.
This is especially problematic if you are using fixed frame with some driver.

Exact steps for others to reproduce the error
Add grease pencil object, draw couple of frames
Add time offset modifier, set it to loop custom range
Bake animation.
Expected: having keyframed looping animation
Reality: first frame baked in all frames of new object{F10223784}

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce MX330/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.75 **Blender Version** Broken: version: 3.0.0 Alpha, branch: temp-lineart-contained, commit date: 2021-07-06 13:48, hash: `e63b4b66e5` Worked: Broken in 2.93.1 also **Short description of error** All other modifiers are baked correctly, but time offset only bakes the first frame in all frames of new object. This is especially problematic if you are using fixed frame with some driver. **Exact steps for others to reproduce the error** Add grease pencil object, draw couple of frames Add time offset modifier, set it to loop custom range Bake animation. Expected: having keyframed looping animation Reality: first frame baked in all frames of new object{[F10223784](https://archive.blender.org/developer/F10223784/time-not-working.blend)}

Added subscriber: @frogstomp-4

Added subscriber: @frogstomp-4
Antonio Vazquez self-assigned this 2021-07-14 10:20:43 +02:00

@frogstomp-4 Could you provide a simple file to reproduce and test the fix?

@frogstomp-4 Could you provide a simple file to reproduce and test the fix?

@antoniov the file is already attached to the initial comment, but here is a dropbox link anyway: https://www.dropbox.com/s/866y2yj8lh0ri4d/time-not-working.blend?dl=0

@antoniov the file is already attached to the initial comment, but here is a dropbox link anyway: https://www.dropbox.com/s/866y2yj8lh0ri4d/time-not-working.blend?dl=0

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks, I got the file from link..yes, there was an attachment but did not work.

Thanks, I got the file from link..yes, there was an attachment but did not work.

This issue was referenced by 3e125d12af

This issue was referenced by 3e125d12af625920d677ede0d24214b33f81b6ba

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

@Jeroen-Bakker Could you include this in 2.93 LTS?

@Jeroen-Bakker Could you include this in 2.93 LTS?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89849
No description provided.