Fix T89849: Time offset not working with Bake Object transform to Grease pencil

The bake animation was not using the remap of time done by grease pencil time modifier.